0.4
- [MISC] Rename (External_)UserID to Anchor
- [ENHANCEMENT] Ticket #3742. Authentication wil mail address is possible now
                including limited support for auto update of accounts
- [DEPRECATED]  setAuthSequential is deprecated now. It now sets UseAnchor
- [BUGFIX]      Ticket #4172. Check if BackURL is set
- [BUGFIX]      Ticket #4186. SQL Query in UpdatePHP

0.3.1
- [BUGFIX] Ticket #3649 - Syntax issue in LDAP driver
- [BUGFIX] Ticket #3568 - Variable Typo in SSTRIPE_Authenticator Authenticate()
- [BUGFIX] Ticket #3569 - Won't add auto-created user to group if group title and code differ

0.3
- [ENHANCEMENT] Enable audit log to database (LoginAttempt table)
- [ENHANCEMENT] Enable audit log to file
- [ENHANCEMENT] Added fake driver
- [ENHANCEMENT] Unittesting
- [ENHANCEMENT]Password locking for sources that do not support it. Uses 
               silverstripes own mechanism for password locking
- [ENHANCEMENT] Add authentication process debugging
- [BUGFIX] Created External Authentication tab in Security Member (user 
           modification) dialog
- [BUGFIX] Make SilverStripe 2.3 compatible. Will not work with previous 
           versions
- [BUGFIX] Update login form to mirror form of built-in authentication
- [BUGFIX] Fix ticket #2536; blank screen on login with Silverstripe >= 2.2.2
- [MISC] Minor code cleanup in LDAP driver

0.2
- [ENHANCEMENT] Added SilverStripe driver (authentication using password from 
                database)
- [ENHANCEMENT] Added HTTPBASIC authentication driver for authenticating against 
                webservers
- [ENHANCEMENT] Added default mail domain
- [ENHANCEMENT] Added extra search criteria for finding account DNto LDAP driver
- [ENHANCEMENT] Added multiple source support. Code can now handle multiple 
                configured source of different types, each with their own 
		settings
- [ENHANCEMENT] Added multiple base-dn support for LDAP driver
- [BUGFIX] Allow to set empty source for SilverStripe accounts