@@ -11,7 +11,7 @@ roel@quantumfluctuations.nl or roel@gloudemans.info
 Requirements
 -----------------------------------------------
 * Silverstripe 2.3.0 or later
-* Some PHP modules depending on the driver in usage like php-imap, php-ldap or
+* Some PHP modules depending on the driver used like php-imap, php-ldap or
   some specific PEAR and/or PECL modules. The module requirements are 
   documented in the configuration template for that module (see doc directory)
 
@@ -23,25 +23,25 @@ http://doc.silverstripe.com/doku.php?id=modules:external-authentication
 
 Installation Instructions
 -----------------------------------------------
-* Copy the auth_external directory into your mail SilverStripe directory
-* Create a proper _config.php file. You can start with the annotated examples
-  from the doc directory
-* run /db/build  (like http://www.yourdomain.com/db/build)
+* Copy the auth_external directory into your main SilverStripe directory
+* Create a proper _config.php file in your auth_external directory. You 
+  can start with the annotated examples from the doc directory
+* run /dev/build  (like http://www.yourdomain.com/dev/build)
 
-You should now have an "External Account" tab on the admin page
+You should now have an "External Account" tab on the admin page.
 
 If things didn't work as expected, enable the debugging in the config file.
 The resulting log should point out the configuration mistakes.
 
 Next to the divers included in the official release, some (user maintained)
-additional drivers might be available at the wiki documentation page.
+drivers may be available by visiting the documentation link above.
 
 
 Usage Overview
 -----------------------------------------------
 This module enables you to use external authentication sources for password
 verification. At the moment this module has 4 drivers. LDAP, FTP, IMAP and
-HTTPBASIC. The IMAP driver also supports POP3. All drivers support SSL, TLS
+HTTPBASIC. The IMAP driver also supports POP3. All drivers support SSL. TLS
 is only supported by the LDAP and IMAP drivers.
 
 When you use this module you will still need to create accounts within
@@ -50,7 +50,7 @@ username and the external authentication source it comes from.
 
 If you run your website at your ISP which also hosts your mailbox, you can use
 the ISP's IMAP/POP3 server to validate your logon. Other users at the ISP
-cannot login when you do that, because the accounts also need to be registered
+cannot login when you do that because the accounts also need to be registered
 within SilverStripe.
 
 
